--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,14 +2,24 @@
     padding: 0;
     margin: 0;
 }
+
+main{
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
 nav{
     display: flex;
     justify-content: space-between;
+    background: gray;
 }
 ul {
     display: flex;
     justify-content: space-between;
-   
+} 
+
+.log{
+    background:red;
+    color:black;
 }
 li{
   list-style: none;  
@@ -31,4 +41,35 @@ button{
 }
 span{
     color: red;
+}
+section .part{
+    height: 80vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+section .part1{
+margin-top: 10%;
+margin-left: 7%;
+}
+
+.part1 h1{
+    margin-top: 15px;
+}
+
+.part1 p{
+    margin-top: 15px;
+}
+
+
+.part1 button{
+    margin-top: 15px;
+    color: white;
+}
+
+section .part2{
+    margin-top: 10%;
+margin-right: 10%;
+   
 }
